
  Modified the CourseList::remove_previously_fulfilled() function, where it uses find_best_match() to find a match
  for a course, instead of the parent's find_match() function.  This allows for hooks to be used, as well as the
  school's sorting/matching policy to be used.  Special thanks to Logan Buth. 
  

2018-03-17
  Fixed subtle bug where substitutions are sometimes displayed more than once in a group.  Special thanks to Logan Buth.
  

2018-03-15
  Fixed bug with pie charts code (from older version of pchart) that was incompatible with PHP7.
  

2018-03-14
  Fixed bug where min grade requirements was being ignored for a newly-created course, when the original course was
  partially filled by a substitution.  Thanks to Logan Buth.
  
  Added new load_degree_plan_ancillary() method to _DegreePlan.  This lets us load just the 'ancillary' data for a degree-- title, advising weight, track
  configs, etc., without having to load the entire degree.  At the moment, it is used primarily on the What If selection form.
  
    
2018-03-11
  Fixed bug where track descriptions (when editing a degree) were having filter_markup applied twice, causing new lines to keep appearing.

  Fixed a non-clean URL issue in comments.js, where deletion was not possible unless clean URLs was enabled.
  

2018-03-09
  Updated hook_fp_get_student_majors to have the same (newly added) arguments as the DatabaseHandler function.  Similarly updated system.module's implentation
  of the hook.  Also updated student_search.module, to take advantage of this addition, to tell it not to join with the degrees table, as the student's listed
  degree might not be present in that catalog year in the degrees table.  This was to fix a bug.


2018-03-07
  Fixed bug where new_from_split courses were allowed to fill into other degrees, instead of going straight to 'excess credits', which is the
  expected behavior.
  